--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
         <artifactId>spring-context</artifactId>
         <version>5.2.9.RELEASE</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aspects</artifactId>
+        <version>5.2.9.RELEASE</version>
+    </dependency>
 
 
 
