--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>org.example</groupId>
     <artifactId>springorigin</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <spring.version>5.2.8.RELEASE</spring.version>
+    </properties>
     <dependencies>
         <!--引入自定义jar包-->
         <dependency>
@@ -26,8 +28,16 @@
             <artifactId>spring-aspects</artifactId>
             <version>5.2.9.RELEASE</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.9.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
